<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PantallaPrincipal" >

	<TextView 
	    android:id="@+id/TituloApp"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/tituloapp"
	    />

	<Spinner
	    android:id="@+id/CmbOpciones"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/TituloApp"
	    android:layout_alignRight="@+id/TituloApp"
	    android:layout_below="@+id/TituloApp"
	    android:layout_marginTop="14dp" />

	<EditText
	    android:id="@+id/EditText"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/ChkRegalo"
	    android:layout_below="@+id/ChkRegalo"
		android:inputType="number" 
		android:text="Introduce el peso del paquete">
		
	</EditText>

	<CheckBox
	    android:id="@+id/ChkTarjeta"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/gruporb"
	    android:layout_toRightOf="@+id/CmbOpciones"
	    android:text="@string/lblTarjetaDedicada" />

	<CheckBox
	    android:id="@+id/ChkRegalo"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBaseline="@+id/ChkTarjeta"
	    android:layout_alignBottom="@+id/ChkTarjeta"
	    android:layout_alignLeft="@+id/gruporb"
	    android:text="@string/lblCajaRegalo" />

	<RadioGroup
	    android:id="@+id/gruporb"
	    android:layout_width="fill_parent"
	    android:layout_height="150dp"
	    android:layout_below="@+id/CmbOpciones"
	    android:layout_marginTop="27dp"
	    android:orientation="vertical" >

	    <RadioButton
	        android:id="@+id/radio1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/gruporb"
	        android:layout_toRightOf="@+id/CmbOpciones"
	        android:text="@string/lblTarifaNormal" 
	        android:checked="true"/>

	    <RadioButton
	        android:id="@+id/radio2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/radio1"
	        android:layout_toRightOf="@+id/CmbOpciones"
	        android:text="@string/lblTarifaUrgente" />
	</RadioGroup>

	<Button
	    android:id="@+id/BotonCalculo"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/EditText"
	    android:layout_alignParentBottom="true"
	    android:layout_marginBottom="14dp"
	    android:layout_marginLeft="47dp"
	    android:text="@string/BotoNombre" />

</RelativeLayout>